1035: Updating DirectDebitsApi + Controller to use RCS Consent Store
https://github.com/SecureApiGateway/SecureApiGateway/issues/1035